--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,42 +5,49 @@
 </head>
 
 <body>
-  <header>
-  <div class="header-banner">
-    <a href="/" class="logo"></a>
-
-    <h1>Visit Finland</h1>
-
-  </div>
-  <div class="clear"></div>
-  <nav>
-    <ul>
-      <li><a href="/archive">Archive</a></li>
-      <li><a href="/events">Events</a></li>
-      <li><a href="/contact">Contact</a></li>
-    <ul>
-  </nav>
-</header>
-
-
-<section class="content">
-  <article>
-    <p>Wolf vinyl hella, jean shorts disrupt skateboard master cleanse hashtag iPhone. Pop-up bicycle rights Brooklyn iPhone Helvetica kitsch Godard, XOXO blog aesthetic beard quinoa. Fixie kale chips PBR&B twee, YOLO raw denim before they sold out photo booth bespoke seitan food truck. Ethical chia before they sold out, trust fund viral ennui you probably haven't heard of them cred bitters mixtape semiotics deep v jean shorts pork belly occupy shabby chic sriracha ethnic normcore bicycle rights single-origin coffee slow-carb jean shorts. Twee ethnic mumblecore, Carles banh mi slow-carb pour-over organic. Ethical tofu narwhal, hoodie viral ennui tousled paleo. Butcher chia cray iPhone keytar, sustainable Cosby sweater literally try-hard put a bird on it photo booth ethical street art literally semiotics. XOXO blog aesthetic beard quinoa. Fixie kale chips PBR&B twee, YOLO raw denim before they sold out photo booth bespoke seitan food truck. Ethical chia before they sold out, trust fund viral ennui you probably haven't heard of them cred bitters mixtape semiotics deep v jean shorts pork belly occupy shabby chic sriracha ethnic normcore bicycle rights single-origin coffee slow-carb jean shorts. Twee ethnic mumblecore, Carles banh mi slow-carb pour-over organic. Ethical tofu narwhal, hoodie viral ennui tousled paleo. </p>
-
-    <img src="http://placehold.it/660x150">
-
-    <p>Twee 8-bit Blue Bottle, wolf tattooed distillery retro dreamcatcher put a bird on it letterpress asymmetrical actually Austin crucifix cred. Selfies ethical butcher vegan, umami bitters literally wolf seitan +1 Intelligentsia Pitchfork. Godard mixtape pork belly Pitchfork, fap food truck wolf banh mi post-ironic. Narwhal letterpress Etsy direct trade irony pour-over. Cosby sweater literally Vice DIY butcher selvage shabby chic, XOXO hashtag letterpress single-origin coffee. Artisan Portland disrupt swag small batch chambray, Neutra bespoke Wes Anderson tofu VHS ennui. Cosby sweater letterpress 90's shabby chic cornhole, literally YOLO sartorial bitters Blue Bottle cardigan chambray asymmetrical.</p>
-
-    <p>Fixie gluten-free sriracha flannel, selfies chambray direct trade. Authentic mixtape semiotics deep v jean shorts pork belly occupy shabby chic sriracha. Tousled Williamsburg fanny pack High Life shabby chic Cosby sweater, gastropub organic cornhole post-ironic hella drinking vinegar cliche wolf pork belly. Wolf selvage cornhole church-key, ethnic raw denim chillwave authentic asymmetrical Austin synth. Single-origin coffee iPhone Carles, Godard synth chia photo booth fap mustache authentic pickled direct trade. Literally Vice Echo Park, trust fund viral ennui you probably haven't heard of them cred biodiesel lomo scenester gastropub chia keffiyeh Intelligentsia. Blue Bottle blog asymmetrical, pickled XOXO sustainable twee seitan cornhole 90's.</p>
-
-  </article>
-
-  <aside>
-    <img src="http://placehold.it/144x150">
-    <img src="http://placehold.it/144x150">
-  </aside>
-</section>
-
+  <div class="raz">
+  1<br>
+  2<br>
+  3<br>
+  <div class="sticky">dfgfngkhnfkhlfnhkl</div>
+  4<br>
+  5<br>
+  6<br>
+  7<br>
+  8<br>
+  9<br>
+  10<br>
+  11<br>
+  12<br>
+  13<br>
+  14<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+  15<br>
+</div>
 
 </body>
 </html>
