--- a/public/screen.css
+++ b/public/screen.css
@@ -1,9 +1,38 @@
 .raz {
-  border: 1px solid red;
+  /*border: 1px solid red;*/
 }
 .sticky {
   position: sticky;
   top: 0;
-  min-height: 2em;
-  background: lightpink;
+  /*min-height: 2em;*/
+  padding: 10px 0;
+  background: #cf7713;
+}
+.sticky ul {
+  list-style: none;
+  text-align: center;
+  vertical-align: middle;
+}
+.sticky ul li {
+  display: inline-block;
+}
+.sticky ul li a {
+  margin-right: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+}
+.sticky ul li a:hover {
+  color: #f7b66b;
+}
+.ban {
+  position: relative;
+  padding: 160px 0;
+  background: url(img/1a.JPG);
+  background-color: #b0b0d9;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
