--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,4 +7,4 @@
 <link rel="stylesheet" href="css/font-awesome.min_1.css">
 <link rel="stylesheet" href="font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="css/screen.css" rel="stylesheet">
+<link href="screen.css" rel="stylesheet">
