--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -144,7 +144,7 @@
           return <div className="sticky">
         		<nav>
         			<ul>
-        				<li><NavLink exact to="/home" activeClassName="active" className="name">Houme</NavLink></li>
+        				<li><NavLink exact to="/" activeClassName="active" className="name">Houme</NavLink></li>
         				<li><NavLink to="/about" activeClassName="active" className="name">About</NavLink></li>
         				<li><NavLink to="/contacts" activeClassName="active" className="name">Contacts</NavLink></li>
         			</ul>
@@ -158,7 +158,7 @@
           <div>
               <Nav />
               <Switch>
-                  <Route exact path="/home" component={Home} />
+                  <Route exact path="/" component={Home} />
                   <Route path="/about" component={About} />
                   <Route path="/contacts" component={Contacts} />
                   <Route component={NotFound} />
