--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -14,7 +14,7 @@ body {
 #top {
   position: relative;
   padding: 220px 0 50px;
-  background: url(img/wert22.JPG);
+  background: url(img/baf243.jpg);
   background-color: #b0b0d9;
   background-size: cover;
   background-position: center center;
