--- a/public/screen.css
+++ b/public/screen.css
@@ -53,9 +53,9 @@ body {
 	padding: 0;
 	margin: 20px 100px 10px;
 }
-.list .last {
+/*.list .last {
   margin-top: 70px;
-}
+}*/
 .list p {
   font-size: 12px;
   color: #000;
