--- a/public/screen.css
+++ b/public/screen.css
@@ -62,7 +62,7 @@ body {
   text-align: justify;
 }
 .list .col-6-p, .list .col-6-n {
-  /*display: inline-block;*/
+  display: inline-block;
   vertical-align: top;
   margin-right: 9%;
 }
@@ -187,7 +187,7 @@ body {
 .services {
   /*position: relative;*/
 	margin: 20px 0 10px;
-	background: #e1e1e1;
+	/*background: #e1e1e1;*/
 	text-align: center;
   padding: 20px;
 }
