--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -35,7 +35,37 @@
                       <p>Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     </div>
-                    
+                    <div className="col-6-n">
+                      <article className="blogpost clearfix">
+                      <h3>Duis aute irure</h3>
+                        <img src="img/ret1.jpg"/>
+                				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                        <div className="teg">
+                					<ul>
+                						<li><NavLink exact to="/" className="number_comments">37 cupidatat</NavLink></li>
+                						<li>Veniam: <NavLink to="/">Voluptate</NavLink></li>
+                						<li>Esse: <NavLink to="/">Occaecat</NavLink></li>
+                					</ul>
+                        </div>
+                				<NavLink to="/" className="button_more">incididunt...</NavLink>
+                        </article>
+
+                        <article className="blogpost clearfix">
+                        <div className="last">
+                        <h3>Duis aute irure</h3>
+                          <img src="img/ret2.jpg"/>
+                  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                          <div className="teg">
+                  					<ul>
+                  						<li><NavLink exact to="/" className="number_comments">37 cupidatat</NavLink></li>
+                  						<li>Veniam: <NavLink to="/">Voluptate</NavLink></li>
+                  						<li>Esse: <NavLink to="/">Occaecat</NavLink></li>
+                  					</ul>
+                          </div>
+                  				<NavLink to="/" className="button_more">incididunt...</NavLink>
+                          </div>
+                          </article>
+                    </div>
                   </div>;
         }
   }
