--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -54,7 +54,10 @@ body {
 	margin: 20px 100px 10px;
 }
 .list .merst {
-  margin: 0 auto;
+  margin: 10px auto;
+}
+.list .merst p {
+  text-align: center;
 }
 .list .last {
   margin-top: 70px;
