--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -106,7 +106,12 @@ body {
 }
 @media screen and (max-width: 410px) {
   .list {
-  	margin: 80px 10px 10px;
+  	margin: 20px 10px 10px;
+  }
+  .list .col-6-p, .list .col-6-n {
+    /*display: inline-block;*/
+    vertical-align: top;
+    margin-right: 0;
   }
 }
 
