--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Poisseux</title>
 <link rel="stylesheet" href="css/font-awesome.min_1.css">
-<link rel="stylesheet" href="font-awesome.min.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href="css/screen.css" rel="stylesheet">
+<link href="css/bootstrap-touch-slider.css" rel="stylesheet" media="all">
+
+<link rel="stylesheet" href="css/animate.css">
+<link href="css/style.css" rel="stylesheet" />
